# Day21-Track2-CI-CD-for-AI-Systems-ngoc-hieu

./: .envrc  .gitignore  REPORT.md  params.yaml  pyproject.toml  shell.nix
.dvc/: config
.github/workflows/: mlops.yml
src/: serve.py  train.py
tasks/: buoc-3.md
tests/: test_train.py
