[project]
name = "day21-track2-ci-cd-for-ai-systems"
version = "0.1.0"
description = "CI/CD pipeline for AI systems with MLflow, DVC, and FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Lab21", email = "lab21@example.com" }
]
keywords = ["mlops", "ci-cd", "machine-learning", "mlflow", "dvc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mlflow>=2.17.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.3",
    "dvc[gs]>=3.50.0",
    "pathspec>=0.11.2",
    "pytest>=8.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "joblib>=1.4.0",
    "google-cloud-storage>=2.16.0",
    "pyyaml>=6.0.1",
    "pyarrow>=17.0.0",
    "numpy>=2.0.0",
    "certifi>=2024.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | build
  | dist
  | .eggs
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]
